--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
   <a href="deportes.html">Deportes</a>
   <a href="cultura.html">Cultura</a>
   <a href="economia.html">Economía</a>
-  <a href="farandula.html">Farándula</a>
+  <a href="FARANDULA.html">Farándula</a>
 </nav>
 
 
