--- a/FARANDULA.html
+++ b/FARANDULA.html
@@ -139,7 +139,7 @@ h4 {
     <h1>Farándula - El Fraro Informativo</h1>
   </header>
 <nav>
-  <a href="periodico.html">Inicio</a>
+  <a href="index.html">Inicio</a>
   <a href="nacional.html">Nacional</a>
   <a href="internacional.html">Internacional</a>
   <a href="deportes.html">Deportes</a>
