--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     </div>
 </a>
 
-<a href="farandula.html" style="text-decoration: none; color: inherit;">
+<a href="FARANDULA.html" style="text-decoration: none; color: inherit;">
     <div class="news-card">
       <div class="content">
         <div class="date">📅 5 Mayo 2025 | ⏰ 11:00 AM</div>
