--- a/FARANDULA.html
+++ b/FARANDULA.html
@@ -152,7 +152,7 @@ h4 {
 
 <article>
       <h1>🎤La Casa de los Famosos México 3: Regresa el reality con nuevas sorpresas y polémicas</h1>
-      <img src="D:\alanm\Desktop\2.jpg">
+      <img src="2.jpg">
 
       <p>La tercera temporada de La Casa de los Famosos México ya está en marcha y promete ser una de las más emocionantes hasta la fecha. El reality show, que ha capturado la atención del público mexicano, regresa con una mezcla de celebridades que aseguran drama, entretenimiento y controversia.</p>
 
