--- a/cultura.html
+++ b/cultura.html
@@ -152,7 +152,7 @@ h4 {
 
 <article>
       <h1>Guadalajara celebra el Festival Cultural de Mayo 2025 con Canadá como país invitado</h1>
-      <img src="D:\alanm\Desktop\9.png">
+      <img src="9.png">
 
       <p>
 
