--- a/deportes.html
+++ b/deportes.html
@@ -152,7 +152,7 @@ h4 {
 
 <article>
       <h1>Ferrari en crisis: Doble descalificación en el Gran Premio de China sacude a la escudería</h1>
-      <img src="D:\alanm\Desktop\5.png">
+      <img src="5.png">
 
       <p> 
 La escudería Ferrari vivió uno de sus episodios más controvertidos y decepcionantes de los últimos años durante el Gran Premio de China 2025. Lo que inicialmente parecía ser una jornada positiva para el equipo italiano, terminó en un auténtico desastre luego de que ambos monoplazas fueran descalificados tras la carrera. Lewis Hamilton y Charles Leclerc, quienes habían logrado sumar puntos importantes, fueron excluidos de la clasificación final por incumplimientos técnicos en sus vehículos.
