--- a/economia.html
+++ b/economia.html
@@ -152,7 +152,7 @@ h4 {
 
 <article>
       <h1>Escalada de la Guerra Comercial entre EE. UU. Y China Sacude la Economía Global</h1>
-      <img src="D:\alanm\Desktop\6.png">
+      <img src="6.png">
 
       <p> 
  
