--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 <section class="breaking-news" style="background:#c62828; color:#fff; padding:20px; text-align:center; margin:20px; border-radius: 8px;">
 <a href="momento.html" style="text-decoration: none; color: inherit;">
   <h2 style="margin-bottom:10px;">🛑 ÚLTIMA HORA</h2>
-  <img src="D:\alanm\Desktop\10.jpg" alt="Última Hora" style="max-width: 100%; height: auto; border-radius: 8px;">
+  <img src="10.jpg" alt="Última Hora" style="max-width: 100%; height: auto; border-radius: 8px;">
   <div style="margin-top:15px;">
     <h3 style="font-size:1.5em;">Popocatépetl registra 17 exhalaciones; autoridades mantienen vigilancia</h3>
     <p style="margin-top:10px;">En las últimas 24 horas se registraron 17 exhalaciones de baja intensidad acompañadas de vapor de agua, gases volcánicos y ligeras cantidades de ceniza.</p>
