--- a/internacional.html
+++ b/internacional.html
@@ -152,7 +152,7 @@ h4 {
 
 <article>
       <h1>Trump declara el fin de los bombardeos en Yemen tras "rendición" hutí</h1>
-      <img src="D:\alanm\Desktop\8.jpg">
+      <img src="8.jpg">
 
       <p>
 
