--- a/momento.html
+++ b/momento.html
@@ -152,7 +152,7 @@ h4 {
 
 <article>
       <h1>Popocatépetl registra 17 exhalaciones; autoridades mantienen vigilancia</h1>
-      <img src="D:\alanm\Desktop\10.jpg">
+      <img src="10.jpg">
 
       <p>
 
