--- a/nacional.html
+++ b/nacional.html
@@ -152,7 +152,7 @@ h4 {
 
 <article>
       <h1>Miles se movilizan en CDMX en la Marcha 4/20 por la legalización del cannabis</h1>
-      <img src="D:\alanm\Desktop\7.png">
+      <img src="7.png">
 
       <p> 
 
