--- a/economia.html
+++ b/economia.html
@@ -145,7 +145,7 @@ h4 {
   <a href="deportes.html">Deportes</a>
   <a href="cultura.html">Cultura</a>
   <a href="economia.html">Economía</a>
-  <a href="farandula.html">Farándula</a>
+  <a href="FARANDULA.html">Farándula</a>
 </nav>
 
   <main>
