--- a/deportes.html
+++ b/deportes.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>El Faro Informativo</title>
+  <link rel="icon" href="11.png">
  <style>
     body {
       font-family: Arial, sans-serif;
