--- a/economia.html
+++ b/economia.html
@@ -137,7 +137,7 @@ h4 {
 <body>
 
   <header>
-    <h1>Economía - El Fraro Informativo</h1>
+    <h1>Economía - El Faro Informativo</h1>
   </header>
 <nav>
   <a href="index.html">Inicio</a>
