--- a/deportes.html
+++ b/deportes.html
@@ -137,7 +137,7 @@ h4 {
 <body>
 
   <header>
-    <h1>Deportes - El Fraro Informativo</h1>
+    <h1>Deportes - El Faro Informativo</h1>
   </header>
 <nav>
   <a href="index.html">Inicio</a>
