--- a/FARANDULA.html
+++ b/FARANDULA.html
@@ -137,7 +137,7 @@ h4 {
 <body>
 
   <header>
-    <h1>Farándula - El Fraro Informativo</h1>
+    <h1>Farándula - El Faro Informativo</h1>
   </header>
 <nav>
   <a href="index.html">Inicio</a>
