--- a/index.html
+++ b/index.html
@@ -93,7 +93,12 @@
   color: #555;
   margin-bottom: 10px;
 }
-
+.news-card .author {
+      font-size: 0.9em;
+      color: #0077b6;
+      font-style: italic;
+      margin-top: 5px;
+    }
 
     footer {
       background: #002244;
@@ -143,6 +148,7 @@
     <h3 style="font-size:1.5em;">Popocatépetl registra 17 exhalaciones; autoridades mantienen vigilancia</h3>
     <p style="margin-top:10px;">En las últimas 24 horas se registraron 17 exhalaciones de baja intensidad acompañadas de vapor de agua, gases volcánicos y ligeras cantidades de ceniza.</p>
     <p style="margin-top:10px; font-size:0.9em;">📅 6 Mayo 2025 | ⏰ 7:15 PM</p>
+    <div class="author">Por Juan Pérez</div>
   </div>
 </a>
 </section>
