Actualizar FARANDULA.html

--- a/FARANDULA.html
+++ b/FARANDULA.html
@@ -166,7 +166,8 @@ h4 {
  <p>La segunda temporada del programa estuvo marcada por diversas controversias, incluyendo la participación de figuras polémicas como Adrián Marcelo. Sin embargo, esto no impidió que el show alcanzara altos niveles de audiencia, lo que ha motivado a la producción a continuar apostando por una fórmula que combina celebridades de distintos ámbitos y personalidades fuertes.</p> 
 
  <p>Con una mezcla de nuevos rostros y veteranos del entretenimiento, La Casa de los Famosos México 3 se perfila como uno de los eventos televisivos más esperados del año. Los fanáticos del reality ya están contando los días para ver qué sorpresas les depara esta nueva edición. </p>
-
+<p> </p>
+<p> -Alan Mata </p>
      </article>
   </main>
 
