Actualizar cultura.html

--- a/cultura.html
+++ b/cultura.html
@@ -177,7 +177,8 @@ La edición 2025 del Festival Cultural de Mayo prioriza la inclusión y la acces
 Con esta edición, el Festival reafirma su papel como plataforma de diálogo artístico internacional, fortaleciendo la relación cultural entre México y Canadá, y consolidando a Guadalajara como una capital cultural del continente.
 
 </p>
-
+<p> </p>
+<p> -Alan Manzano </p>
      </article>
   </main>
 
