Actualizar deportes.html

--- a/deportes.html
+++ b/deportes.html
@@ -169,7 +169,8 @@ El director del equipo, Frédéric Vasseur, no tardó en ofrecer declaraciones t
 “Hemos cometido errores que no deberían pasar en un equipo como Ferrari. Las condiciones del formato sprint complican la preparación, pero no es excusa. Toca asumir la responsabilidad y corregir el rumbo”.
 Los pilotos también manifestaron su frustración. Hamilton declaró sentirse “profundamente decepcionado”, mientras que Leclerc señaló que la penalización fue “dura, pero justa”, reconociendo que deben mejorar los controles técnicos internos para evitar nuevas sanciones.
 </p>
-
+<p> </p>
+<p> -Alan Mata </p>
      </article>
   </main>
 
