Actualizar economia.html

--- a/economia.html
+++ b/economia.html
@@ -173,7 +173,8 @@ En el sudeste asiático, varios países expresan su preocupación ante una posib
 El conflicto comercial entre las dos mayores potencias del mundo parece lejos de resolverse, y los analistas advierten que sus consecuencias podrían extenderse más allá del ámbito económico, afectando también la estabilidad geopolítica y la cooperación internacional en temas clave como tecnología, seguridad y medioambiente.
 
 </p>
-
+<p> </p>
+<p> -Frida Flores </p>
      </article>
   </main>
 
