Actualizar internacional.html

--- a/internacional.html
+++ b/internacional.html
@@ -173,7 +173,8 @@ El alto el fuego fue alcanzado gracias a una mediación diplomática encabezada 
 A pesar del anuncio de Trump, líderes hutíes desmintieron que se haya alcanzado un acuerdo formal. En declaraciones difundidas por medios controlados por los rebeldes, un alto comandante hutí aseguró que seguirán atacando “objetivos israelíes” mientras continúe la ofensiva sobre la Franja de Gaza. Esta declaración pone en entredicho la versión estadounidense de una capitulación total y revela las profundas divisiones entre la narrativa oficial de Washington y la posición real del movimiento rebelde.
 
 </p>
-
+<p> </p>
+<p> -Alan Manzano </p>
      </article>
   </main>
 
