Actualizar nacional.html

--- a/nacional.html
+++ b/nacional.html
@@ -172,7 +172,8 @@ La Marcha 4/20 concluyó sin incidentes mayores y evidenció el creciente apoyo 
 
 
 </p>
-
+<p> </p>
+<p> -Frida Flores </p>
      </article>
   </main>
 
